--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Assignment 3</title>
         <!-- CSS CDN link-->
         <link
             rel="stylesheet"
@@ -47,17 +47,17 @@
             </div>
         </div>
         <!-- THird session -->
-        <div class="container-fluid bg-dark opacity-100 pb-5">
+        <div class="container-fluid bg-dark opacity-100 p-5">
             <div class="row justify-content-center">
                 <div class="col-sm-3">
-                    <div class="card mt-3" style="width: 18rem">
+                    <div class="card mt-3 rounded-3">
                         <img
                             src="images/pic1.jpeg"
-                            class="card-img-top p-3"
+                            class="card-img-top p-3 rounded-5"
                             alt="..."
                         />
-                        <div class="card-body">
-                            <h4>Web Development</h4>
+                        <div class="card-body text-center">
+                            <h5>Web Development</h5>
                             <p class="card-text">
                                 Lorem ipsum dolor sit amet consectetur
                                 adipisicing elit.
@@ -66,14 +66,14 @@
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <div class="card mt-3" style="width: 18rem">
+                    <div class="card mt-3 rounded-3">
                         <img
                             src="images/pic1.jpeg"
-                            class="card-img-top p-3"
+                            class="card-img-top rounded-5 p-3"
                             alt="..."
                         />
-                        <div class="card-body">
-                            <h4>Web Development</h4>
+                        <div class="card-body text-center">
+                            <h5>Web Development</h5>
                             <p class="card-text">
                                 Lorem ipsum dolor sit amet consectetur
                                 adipisicing elit.
@@ -82,14 +82,14 @@
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <div class="card mt-3" style="width: 18rem">
+                    <div class="card mt-3 rounded-3">
                         <img
                             src="images/pic1.jpeg"
-                            class="card-img-top p-3"
+                            class="card-img-top rounded-5 p-3"
                             alt="..."
                         />
-                        <div class="card-body">
-                            <h4>Web Development</h4>
+                        <div class="card-body text-center">
+                            <h5>Web Development</h5>
                             <p class="card-text">
                                 Lorem ipsum dolor sit amet consectetur
                                 adipisicing elit.
